# airframe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
crates/airframe_api/: Cargo.toml  README.md
crates/airframe_api/src/: lib.rs
crates/airframe_api/tests/: api_tests.rs
crates/airframe_args/: Cargo.toml  README.md
crates/airframe_args/examples/: args_basic.rs  config_args.rs
crates/airframe_args/src/: cli.rs  lib.rs
crates/airframe_args/tests/: config_precedence.rs
crates/airframe_audit/: Cargo.toml  README.md
crates/airframe_audit/src/: chain.rs  crypto.rs  entry.rs  error.rs  lib.rs  module.rs  software.rs  store.rs  verify.rs
crates/airframe_channel/: Cargo.toml  README.md
crates/airframe_channel/src/: channel.rs  error.rs  framing.rs  hkdf.rs  lib.rs  tcp.rs  uds.rs
crates/airframe_codec/: Cargo.toml  README.md
crates/airframe_codec/examples/: cbor_roundtrip.rs  content_id.rs  der_encode.rs  envelope_bincode.rs
crates/airframe_codec/src/: basexx.rs  codecs.rs  content_id.rs  envelope.rs  error.rs  lib.rs  module.rs
crates/airframe_codec/tests/: basexx.rs  codec_roundtrip.rs  codecs_errors.rs  compat_json.rs  der_and_content_id.rs  envelope.rs  error_and_lib.rs  fuzz_props.rs
crates/airframe_compress/: Cargo.toml  README.md
crates/airframe_compress/examples/: brotli_basic.rs  errors.rs  gzip_basic.rs  lz4_basic.rs  smoke.rs  streaming.rs  zstd_basic.rs
crates/airframe_compress/src/: compressor.rs  error.rs  lib.rs  stream.rs
crates/airframe_compress/tests/: roundtrip.rs  smoke.rs
crates/airframe_config/: Cargo.toml  README.md
crates/airframe_config/examples/: config_basic.rs  config_cli.rs  print_bind.rs
crates/airframe_config/src/: config_listener.rs  defaults_registry.rs  lib.rs  module.rs  prelude.rs  reload.rs  resolve.rs
crates/airframe_core/: Cargo.toml  README.md
crates/airframe_core/examples/: basic_app.rs  end_to_end_app.rs  error_codes.rs  minimal_router.rs  spacetime_health_example.rs  spacetime_integration.rs  spacetime_topo_examples.rs
crates/airframe_core/src/: bus.rs  error.rs  lib.rs  module.rs  platform.rs  registry.rs  retry.rs
crates/airframe_core/tests/: spacetime_async_adapters.rs
crates/airframe_crypt/: CHECKLIST.md  Cargo.toml  README.md
crates/airframe_crypt/examples/: crypt_basic.rs  derive_encrypt.rs  kdf_argon2.rs  provider_suite.rs  software_suite.rs
crates/airframe_crypt/src/: asym.rs  envelope.rs  error.rs  hash.rs  kdf.rs  lib.rs  module.rs  otp.rs  rand.rs  sym.rs
crates/airframe_data/: Cargo.toml  README.md
crates/airframe_data/examples/: bytecache_fs.rs  cache_basic.rs  cache_codec_shim.rs  cache_compress.rs  cache_layers_composed.rs  cache_readthrough.rs  cache_ttl_namespace.rs  fs_repo.rs  mem_repo.rs  repo_basic.rs
crates/airframe_data/src/: error.rs  key.rs  lib.rs  repo.rs
crates/airframe_data/tests/: codec_shim.rs  fs_secure.rs  fs_secure_dir_harden_unix.rs
crates/airframe_db/: Cargo.toml  README.md
crates/airframe_db/examples/: fake_connect.rs  migrator.rs  mock_pool.rs  retry_timeout.rs  smoke.rs
crates/airframe_db/src/: config.rs  connection.rs  driver.rs  error.rs  lib.rs  module.rs  pool.rs  retry.rs  timeout.rs
crates/airframe_db/tests/: graph_optional_health.rs  module_smoke.rs  pool_retry_timeout.rs  smoke.rs  traits.rs
crates/airframe_event/: Cargo.toml  README.md
crates/airframe_event/src/: lib.rs
crates/airframe_event/tests/: subscribe_publish.rs
crates/airframe_health/: Cargo.toml  README.md
crates/airframe_health/examples/: dummy_json.rs  health_axum.rs  health_basic.rs
crates/airframe_health/src/: http.rs  http_axum.rs  lib.rs
crates/airframe_health/tests/: health_http_routes.rs
crates/airframe_http/: Cargo.toml  README.md
crates/airframe_http/examples/: admin_cli.rs  spec_e2e.rs  two_contributors.rs
crates/airframe_http/src/: admin.rs  lib.rs
crates/airframe_http/tests/: contrib_order.rs
crates/airframe_id/: Cargo.toml  README.md
crates/airframe_id/src/: lib.rs
crates/airframe_ipc/: Cargo.toml  README.md
crates/airframe_ipc/src/: child.rs  frame_header.rs  lib.rs  shm.rs  socket.rs
crates/airframe_kv/: Cargo.toml  README.md
crates/airframe_kv/examples/: kv_basic.rs
crates/airframe_kv/src/: acl.rs  inmemory.rs  lib.rs  module.rs  store.rs  tests.rs  watch.rs
crates/airframe_log_api/: Cargo.toml  README.md
crates/airframe_log_api/src/: lib.rs
crates/airframe_logging/: Cargo.toml  README.md
crates/airframe_logging/examples/: log_cli.rs  logging_basic.rs
crates/airframe_logging/src/: bridge.rs  correlation.rs  filter.rs  layer_parent.rs  lib.rs  prelude.rs  sinks_builder.rs  testing.rs  validation.rs
crates/airframe_logging/tests/: logging_module.rs  rotation.rs  sinks_layer.rs
crates/airframe_macros/: Cargo.toml  README.md
crates/airframe_macros/src/: caps.rs  descriptor.rs  error.rs  lib.rs  registry.rs
crates/airframe_metrics/: Cargo.toml  README.md
crates/airframe_metrics/src/: lib.rs  otel.rs
crates/airframe_mysql/: Cargo.toml  README.md
crates/airframe_mysql/examples/: pool_wait.rs  query_api.rs  smoke.rs
crates/airframe_mysql/src/: conn.rs  lib.rs  module.rs
crates/airframe_mysql/tests/: dsn.rs  feature_on.rs  live.rs  smoke.rs  traits_mock.rs
crates/airframe_net/: Cargo.toml  README.md
crates/airframe_net/src/: connection.rs  error.rs  fragment.rs  lib.rs  peer.rs  reliable.rs  transport.rs
crates/airframe_pdata/: Cargo.toml  README.md
crates/airframe_pdata/examples/: bytes_mem.rs  compress_cte.rs  module_mem.rs  typed_mem.rs
crates/airframe_pdata/src/: builder.rs  bytes.rs  context.rs  error.rs  lib.rs  module.rs  policy.rs  secrets.rs  typed.rs
crates/airframe_pdata/tests/: aad_and_rewrap.rs  roundtrip.rs
crates/airframe_pg/: Cargo.toml  README.md
crates/airframe_pg/src/: error.rs  lib.rs  module.rs  pool.rs
crates/airframe_prefab/: Cargo.toml  README.md
crates/airframe_recovery_bundle/: Cargo.toml  README.md
crates/airframe_redis/: Cargo.toml  README.md
crates/airframe_scheduler/: Cargo.toml  README.md
docs/: README.md  (+5 more)
(+211 files in other folders)
