[package]
name = "airframe_args"
description = "Captures and normalizes process argv into a structured CliArgs service for Airframe modules."
version.workspace = true
edition = "2021"
license.workspace = true
readme = "README.md"

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core" }
airframe_macros = { version = "1.0.0", path = "../airframe_macros" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
semver = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
airframe_config = { path = "../airframe_config", features = ["full"] }
tempfile = "3"
toml = "0.8"
