[package]
name = "airframe_channel"
description = "Noise_XX secure channel for the Airframe SDK: mutually authenticated, encrypted byte streams over TCP and Unix sockets."
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
airframe_crypt = { version = "1.0.0", path = "../airframe_crypt" }
airframe_core = { version = "1.0.0", path = "../airframe_core", optional = true }
airframe_macros = { version = "1.0.0", path = "../airframe_macros", optional = true }
thiserror = "1.0"
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["io-util", "net", "rt", "macros", "sync"], optional = true }
semver = { version = "1", optional = true }
openssl = "0.10.73"

[features]
default = []
tcp = ["dep:tokio", "dep:async-trait"]
uds = ["dep:tokio", "dep:async-trait"]
module = ["dep:airframe_core", "dep:airframe_macros", "dep:async-trait", "dep:semver"]
full = ["tcp", "uds", "module"]

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
