[package]
name = "airframe_codec"
version.workspace = true
edition = "2021"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Encoding/decoding utilities and formats integration for Airframe."

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core" }
airframe_crypt = { version = "1.0.0", path = "../airframe_crypt" }
airframe_macros = { version = "1.0.0", path = "../airframe_macros", optional = true }
airframe_config = { version = "1.0.0", path = "../airframe_config", optional = true }
thiserror = "1"
async-trait = { version = "0.1", optional = true }
semver = { version = "1", optional = true }
tokio-util = { version = "0.7", optional = true }
anyhow = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = { version = "0.11" }
serde_json = "1"
bincode = "1"
rasn = { version = "0.16" }
base64 = "0.22"
data-encoding = "2.5"
tracing = "0.1"
toml = { version = "0.8", optional = true }

[features]
# Enables Airframe runtime module wiring (CodecModule) and config-driven selection.
module = ["dep:toml", "dep:async-trait", "dep:semver", "dep:tokio-util", "dep:anyhow", "dep:airframe_macros"]
# Enables reading BasicConfig (cap:config) during module init.
config = ["module", "dep:airframe_config"]

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt"] }
