[package]
name = "airframe_config"
version.workspace = true
edition = "2021"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Configuration loading, watching, and module integration for Airframe."

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core", optional = true }
airframe_macros = { version = "1.0.0", path = "../airframe_macros", optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
async-trait = { version = "0.1", optional = true }
semver = { version = "1", optional = true }
notify = { version = "6", optional = true }
tokio = { version = "1", features = ["rt", "time"] }
tokio-util = { version = "0.7", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
airframe_args = { version = "1.0.0", path = "../airframe_args", optional = true }
tracing = "0.1"

[features]
default = []
module = ["dep:airframe_core", "dep:airframe_macros", "dep:notify", "dep:tokio-util", "dep:tokio-stream", "dep:async-trait", "dep:semver"]
args = ["dep:airframe_args"]
full = ["module", "args"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
serial_test = "2"


[[example]]
name = "config_cli"
required-features = ["args", "module"]

[[example]]
name = "config_basic"
required-features = ["module"]

[[example]]
name = "print_bind"
required-features = ["args", "module"]
