[package]
name = "airframe_crypt"
version.workspace = true
edition = "2021"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cryptographic primitives and suite for Airframe (OpenSSL-backed)."

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core" }
airframe_macros = { version = "1.0.0", path = "../airframe_macros" }
openssl = "0.10.73"
thiserror = "1.0"
totp-rs = "5"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bincode = "1.3"
anyhow = "1"
async-trait = "0.1"
semver = "1"
tracing = "0.1"
argon2 = { version = "0.5", default-features = false, optional = true, features = ["std", "password-hash"] }

[features]
# No default opt-in for argon2 to keep builds slim; enable via `--features argon2`.
argon2 = ["dep:argon2"]
