[package]
name = "airframe_health"
version.workspace = true
edition = "2021"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Health checks and readiness signaling for Airframe apps."

[features]
# Axum route adapters that use airframe_http facilities to expose health routes from this crate
http = [
    "dep:airframe_http",
    "dep:axum",
    "airframe_http/server",
    "airframe_http/module",
]
# New name; enabling it will enable the legacy `http` feature gates in code
adapters-axum = ["http"]

default = []
full = ["adapters-axum"]

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core" }
airframe_http = { version = "1.0.0", path = "../airframe_http", optional = true }
airframe_macros = { version = "1.0.0", path = "../airframe_macros" }
anyhow = "1"
async-trait = "0.1"
semver = "1"
tokio = { version = "1", features = ["time", "rt", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
dashmap = "6"
axum = { version = "0.8", optional = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
http = "1"
tower = "0.5"
serde_json = "1"

[[example]]
name = "health_axum"
required-features = ["adapters-axum"]

[[example]]
name = "dummy_json"
