[package]
name = "airframe_id"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared identifier types for the Airframe ceremony framework: InstallId, CeremonyId, MethodId, BundleId, AdminId, TrusteeId, plus Threshold."

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1.7", features = ["zeroize_derive"] }

[dev-dependencies]
serde_json = "1"
