[package]
name = "airframe_logging"
version.workspace = true
edition = "2021"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Logging module and sinks for Airframe with config integration."

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core", optional = true }
airframe_macros = { version = "1.0.0", path = "../airframe_macros", optional = true }
airframe_config = { version = "1.0.0", path = "../airframe_config", optional = true }
airframe_log_api = { version = "1.0.0", path = "../airframe_log_api" }
anyhow = "1"
async-trait = "0.1"
semver = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
airframe_args = { version = "1.0.0", path = "../airframe_args", optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }
tracing-journald = { version = "0.3", optional = true }
syslog-tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace"], optional = true }

[features]
# Minimal defaults: no features enabled by default. Enable `module` and `config` explicitly where needed.
default = []
module = ["dep:airframe_core", "dep:airframe_macros", "dep:tokio-util"]
config = ["dep:airframe_config", "airframe_config/module"]
args = ["dep:airframe_args"]
# Renamed to adapters-* (breaking)
adapters-journald = ["dep:tracing-journald"]
adapters-syslog = ["dep:syslog-tracing"]
otel-traces = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
full = ["module", "config", "args", "adapters-journald", "adapters-syslog"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tempfile = "3"
toml = "0.8"
chrono = "0.4"
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "logging_basic"
required-features = ["module", "config"]
