[package]
name = "airframe_macros"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Declarative macros for Airframe module development"

[dependencies]
# Re-export types needed by macros for hygiene
airframe_core = { version = "1.0.0", path = "../airframe_core" }

[dev-dependencies]
semver = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
