[package]
name = "airframe_pg"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "PostgreSQL adapter for Airframe DB abstractions."

[dependencies]
airframe_core = { version = "1.0.0", path = "../airframe_core" }
airframe_db = { version = "1.0.0", path = "../airframe_db" }
airframe_config = { version = "1.0.0", path = "../airframe_config", optional = true }
airframe_health = { version = "1.0.0", path = "../airframe_health", optional = true }
airframe_macros = { version = "1.0.0", path = "../airframe_macros", optional = true }
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
anyhow = "1"
async-trait = "0.1"
semver = "1"
futures = "0.3"

[features]
default = []
# Enable the real PostgreSQL driver implementation (pulls in sqlx)
driver = ["dep:sqlx"]
# Enable runtime module integration for Airframe (implies driver and required modules)
module = [
    "driver",
    "dep:airframe_config",
    "dep:airframe_health",
    "dep:airframe_macros",
]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres"]
optional = true
